--- a/visualizing-government-debt.html
+++ b/visualizing-government-debt.html
@@ -25,7 +25,7 @@
 <p>For this exercise, I began by exploring the OECD’s government debt dataset. The dataset provides general government debt-to-GDP ratios across various countries from 1995 to 2021. Using the built-in web tool on the OECD website, I customized a bar chart to focus on the year 2021, allowing for comparison of debt-to-GDP ratios across different countries.</p>
 
 <h3>Embedded Bar Chart Visualization from OECD:</h3>
-<!-- You can link to the OECD chart here -->
+<img src="Part1.png" alt="Part One Bar Chart" style="max-width: 100%; height: auto;">
 
 <h2>Part Two: Working with Tableau</h2>
 
@@ -42,7 +42,7 @@
 <p>For the final part of this assignment, I created a line chart in Tableau, focusing on the changes in debt-to-GDP ratios over time for a few selected countries. This chart provides a dynamic view of how the debt ratios have evolved for these countries and highlights any significant changes over time.</p>
 
 <h3>Embedded Line Chart Visualization:</h3>
-<!-- You can add the embedded line chart iframe here -->
+<img src="Part3.png" alt="Part Three Line Chart" style="max-width: 100%; height: auto;">
 
 </body>
 </html>
